# olmlx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTED.md  LICENSE  README.md  conftest.py  models.json.example  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/skills/babysit-pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/factory/: README.md
.github/workflows/: aider-code-review.yml  aider-review.yml  ci.yml  claude-code-review.yml  factory-babysit.yml  factory-explore.yml  factory-implement.yml  factory-labels.yml  factory-plan.yml  publish.yml  real-model-smoke.yml
docs/: USER_MANUAL.md  batching-plan.md  streaming.md
docs/benchmarks/extended-2026-05/: README.md
docs/benchmarks/qwen36-gemma-2026-05/: README.md
docs/benchmarks/qwen3next-flashmoe-2026-05/: README.md
docs/superpowers/plans/: 2026-03-13-input-validation.md  2026-04-17-qwen3-coder-throughput.md  2026-05-04-step3p5-flash-moe-support.md  2026-05-22-promote-flash-prefetch-speculative.md  2026-05-24-extended-bench.md  2026-05-28-dflash-multi-window-training.md  2026-05-28-radix-prompt-cache.md  2026-05-28-whisper-transcription-endpoint.md  2026-05-29-prompt-cache-checkpoint-port.md  2026-06-02-prometheus-metrics.md  2026-06-03-opentelemetry-tracing.md  2026-06-04-mtp-speculative.md  2026-06-05-vlm-tools-with-images.md  2026-06-07-openai-responses-endpoint.md  2026-06-07-vlm-gating-lift.md  2026-06-08-native-audio-input.md  2026-06-08-rerank-endpoint.md  2026-06-08-tts-speech-endpoint.md  2026-06-11-dflash-gemma4-31b.md  2026-06-11-shard-kv-quant-tier1.md  (+13 more)
examples/skills/: code-review.md  commit-message.md  debug.md  explain.md  github-manager.md  refactor.md
mlx_ollama/: __main__.py  app.py  cli.py  config.py
mlx_ollama/engine/: inference.py  model_manager.py  registry.py  template_caps.py  tool_parser.py
mlx_ollama/models/: manifest.py  store.py
mlx_ollama/routers/: anthropic.py  blobs.py  chat.py  embed.py  generate.py  manage.py  models.py  openai.py  status.py
mlx_ollama/schemas/: anthropic.py  chat.py  common.py  embed.py  generate.py  manage.py  models.py  openai.py  pull.py  status.py
mlx_ollama/utils/: streaming.py  timing.py
olmlx/: __init__.py  app.py  cli.py  config.py  context.py
olmlx/bench/: __init__.py  api_bench.py  extended_runner.py  extended_suites.py  goldens.py  ifeval_grader.py  prompts.py  quality.py  results.py  runner.py  scenarios.py  task_prompts.py  tier_table.py  worker.py
olmlx/chat/: __init__.py  builtin_tools.py  config.py  errors.py  llm_judge.py  mcp_client.py  session.py  skills.py  tool_safety.py  tui.py
olmlx/engine/: awq_gptq_converter.py  batching.py  chat_templating.py  distributed.py  distributed_worker.py  gdn_rollback.py  gemma4_sanitize_fix.py  grammar.py  inference.py  logits_processors.py  lookahead_decoder.py  model_manager.py  panel.py  pipeline.py  pre_shard.py  proxy_tuning.py  registry.py  responses_state.py  ropefix.py  shardquant.py  shardquant_cache.py  shardquant_calibrate.py  shardquant_fused.py  shardquant_kernels.py  spec_decoder_base.py  spectralquant.py  spectralquant_cache.py  spectralquant_calibrate.py  speculative.py  speculative_loaders.py  speculative_stream.py  stop_sequences.py  template_caps.py  tool_parser.py  tree_speculative.py  tts.py  turboquant.py  turboquant_cache.py  vlm_load.py
olmlx/models/: manifest.py  store.py
olmlx/proxy_tuning_pipeline/: __init__.py  cli.py  curate.py  eval.py  eval_driver.py  eval_judge.py  eval_prompts.jsonl  eval_schema.py  expand.py  extract.py  schema.py  verify.py
olmlx/routers/: agent.py  anthropic.py  audio.py  blobs.py  chat.py  common.py  embed.py  generate.py  manage.py  metrics.py  models.py  openai.py  rerank.py  responses.py  status.py  streaming_common.py  thinking_split.py
olmlx/schemas/: agent.py  anthropic.py  audio.py  chat.py  common.py  embed.py  generate.py  manage.py  models.py  openai.py  rerank.py  responses.py  status.py
olmlx/ui/: app.js  index.html  style.css
olmlx/utils/: affinity.py  audio.py  audio_input.py  images.py  loop_affinity.py  memory.py  metrics.py  streaming.py  timing.py  tracing.py
scripts/: bench_hqq.py  bench_quant_compile.py  bench_quant_e2e.py  build_extended_report.py  dflash_acceptance_probe.py  dflash_diagnose.py  dflash_gen_data.py  dflash_memorization_probe.py  dflash_overfit_probe.py  dflash_train_from_jsonl.py  eagle_diagnose.py  grade_quant_compare.py  mtp_decoder_probe.py  real_model_smoke.sh  repro_oom_380.py  run_extended_bench.py  run_with_auto_restart.sh  shard_ab_bench.py  verify_multiturn_tools.py
tests/: __init__.py  conftest.py  test_adapter_loading.py  test_adapter_manager.py  test_adapter_ps.py  test_adapter_registry.py  test_adapter_store.py  test_agent_delegate.py  test_agent_memory.py  test_agent_orchestrator.py  test_agent_skills.py  test_agent_store.py  test_agent_tool_safety.py  test_agent_tools.py  test_api_bench.py  test_api_bench_coverage.py  test_app.py  test_audio_encoding.py  test_audio_formats.py  test_audio_input_util.py  test_awq_gptq_converter.py  test_awq_gptq_detection.py  test_batching.py  test_bench_goldens.py  test_bench_prompts.py  test_bench_quality.py  test_bench_quality_wiring.py  test_bench_results.py  test_bench_runner.py  test_bench_scenarios.py  test_bench_task_prompts.py  test_bench_worker.py  test_bench_worker_coverage.py  test_build_extended_report_charts.py  test_build_extended_report_markdown.py  test_builtin_tools.py  test_builtin_tools_coverage.py  test_chat_cli.py  test_chat_config.py  test_chat_errors.py  (+177 more)
tests/integration/: conftest.py  test_awq_gptq_pull.py  test_cross_api.py  test_edge_cases.py  test_extended_bench_smoke.py  test_model_lifecycle.py  test_model_pull.py  test_prompt_cache.py  test_real_model.py  test_streaming_disconnect.py  test_vlm_tools_images.py
tests/live/: test_batching_real.py  test_gemma4_unified_text.py  test_rerank_real.py  test_responses_sdk.py  test_shard_quant_real.py  test_tree_speculative_real.py  test_tts_speech.py  test_vlm_audio.py  test_vlm_cache_grammar.py  test_vlm_tools_images.py  test_voice_real.py
(+155 files in other folders)
