[project]
name = "olmlx"
version = "0.1.0"
description = "Ollama API-compatible server using Apple MLX for inference"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "mlx-lm>=0.31.1",
    "huggingface-hub>=0.20",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mlx-vlm>=0.4.3",
    "transformers>=5.5.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "mcp>=1.0",
    "rich>=13.0",
    "xgrammar>=0.2.1",
    "mlx-whisper>=0.4.3",
    "mlx-audio>=0.4.4",
    # Kokoro TTS (mlx-audio) needs misaki for English grapheme->phoneme text
    # processing; without it /v1/audio/speech raises ImportError at generate
    # time. The [en] extra pulls the English pipeline (spacy etc.). Issue #367.
    "misaki[en]>=0.9.4",
    # misaki.en calls spacy.load("en_core_web_sm") at generate time. spaCy's
    # runtime auto-download does NOT become importable in-process, so a fresh
    # `uv sync` would otherwise 500 on the first /v1/audio/speech request.
    # The wheel (3.8.x matches the locked spaCy 3.8.x) is pinned via
    # [tool.uv.sources] below so it's present after sync; bump in lockstep with
    # spaCy's major.minor. Issue #367.
    "en-core-web-sm",
    "prometheus-client>=0.20",
]

[project.scripts]
olmlx = "olmlx.__main__:main"

[project.optional-dependencies]
search = ["duckduckgo-search>=6.0"]
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
# spaCy English model for Kokoro TTS (#367) — not on PyPI, distributed as a
# GitHub release wheel. Keep the version aligned with the locked spaCy
# major.minor (currently 3.8.x).
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.coverage.run]
source = ["olmlx"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "datasets>=3.0",
    "httpx>=0.28.1",
    "matplotlib>=3.9",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.380",
    "openai>=1.66",
    "ruff>=0.9",
]
