[project]
name = "olmlx"
version = "0.1.0"
description = "Ollama API-compatible server using Apple MLX for inference"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    # Upper bounds are deliberate (#468): engine/gdn_rollback.py carries a
    # bit-for-bit copy of mlx-lm's GatedDeltaNet.__call__, and the
    # speculative/VLM paths reach into upstream module internals. Bump the
    # bounds only after re-verifying that copy and the GDN linearity
    # assumption against the new release.
    "mlx-lm>=0.31.1,<0.32",
    # mlx is pinned explicitly (normally it would ride mlx-lm's pin) because
    # 0.31.2 made streams thread-local: an array lazily bound to a stream
    # created on another thread can no longer be mx.eval'd cross-thread
    # ("There is no Stream(gpu, N) in current thread"). olmlx's snapshot /
    # disk-spill / prefetcher paths all eval on worker threads (#284 family),
    # so 0.31.2 fails 16 tests. Lift this only after adapting those paths (#499).
    "mlx>=0.31.1,<0.31.2",
    "huggingface-hub>=0.20",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mlx-vlm>=0.4.4,<0.5",
    "transformers>=5.5.0",
    # torch is NOT declared here on purpose (#469): xgrammar and mlx-whisper
    # both require it transitively, so it is always installed — but olmlx
    # itself never imports it. torchvision is gone entirely: transformers 5.x
    # auto-falls-back to its PIL image-processor backend when torchvision is
    # absent (every VLM ships both variants), so the VLM path keeps working.
    "mcp>=1.0",
    "rich>=13.0",
    "xgrammar>=0.2.1",
    "mlx-whisper>=0.4.3",
    "prometheus-client>=0.20",
]

[project.scripts]
olmlx = "olmlx.__main__:main"

[project.optional-dependencies]
# duckduckgo-search was renamed to ddgs in mid-2025; the old name is
# unmaintained (final release 8.1.1) and its scraping breaks without updates.
search = ["ddgs>=9.0"]
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
# Kokoro TTS for /v1/audio/speech and `olmlx chat --voice` (#367, #469).
# Not core: this stack is several GB and only serves speech synthesis.
audio = [
    "mlx-audio>=0.4.4",
    # Kokoro TTS (mlx-audio) needs misaki for English grapheme->phoneme text
    # processing; without it /v1/audio/speech raises ImportError at generate
    # time. The [en] extra pulls the English pipeline (spacy etc.). Issue #367.
    "misaki[en]>=0.9.4",
    # misaki.en calls spacy.load("en_core_web_sm") at generate time. spaCy's
    # runtime auto-download does NOT become importable in-process, so a fresh
    # `uv sync` would otherwise 500 on the first /v1/audio/speech request.
    # The wheel (3.8.x matches the locked spaCy 3.8.x) is pinned via
    # [tool.uv.sources] below so it's present after sync; bump in lockstep with
    # spaCy's major.minor. Issue #367.
    "en-core-web-sm",
]
# Terminal voice chat (`olmlx chat --voice`, #444): mic capture + playback via
# PortAudio, plus the TTS stack it speaks through (self-referential extra).
voice = ["olmlx[audio]", "sounddevice>=0.4.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
# spaCy English model for Kokoro TTS (#367) — not on PyPI, distributed as a
# GitHub release wheel. Keep the version aligned with the locked spaCy
# major.minor (currently 3.8.x).
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.coverage.run]
source = ["olmlx"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "datasets>=3.0",
    "httpx>=0.28.1",
    "matplotlib>=3.9",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.380",
    "openai>=1.66",
    "ruff>=0.9",
]
