[project]
name = "olmlx"
version = "0.1.0"
description = "Ollama API-compatible server using Apple MLX for inference"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    # Upper bounds are deliberate (#468): engine/gdn_rollback.py carries a
    # bit-for-bit copy of mlx-lm's GatedDeltaNet.__call__, and the
    # speculative/VLM paths reach into upstream module internals. Bump the
    # bounds only after re-verifying that copy and the GDN linearity
    # assumption against the new release.
    "mlx-lm>=0.31.3,<0.32",
    # mlx is pinned explicitly (normally it would ride mlx-lm's pin) to set
    # the floor at 0.32.0: it fixes the mx.fast.rope B>1/L==1 decode-shape
    # corruption (ml-explore/mlx#3498; engine/ropefix.py was the workaround)
    # and ships the thread-local stream model this codebase is written
    # against (#499): generation streams resolve per-thread, worker GPU work
    # is fenced by worker-side sync + thread join, never cross-thread sync.
    "mlx>=0.32.0,<0.33",
    "huggingface-hub>=0.20",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # mlx-vlm 0.6.4 (specifically — the guard is present through 0.6.3)
    # dropped the is_mlx_format guard around sanitize_weights, which
    # scrambles gemma4 audio-tower conv weights on pre-converted MLX
    # checkpoints; engine/gemma4_sanitize_fix.py carries a gemma4-scoped
    # workaround until the upstream shape-guard fix (on main, unreleased as
    # of 0.6.4) ships. 0.6.4 is taken despite the patch-free <0.6.4
    # alternative for its server/TTS/STT endpoints, gemma4_unified module,
    # and prefill performance work.
    "mlx-vlm>=0.6.4,<0.7",
    "transformers>=5.5.0",
    # torch is NOT declared here on purpose (#469): xgrammar and mlx-whisper
    # both require it transitively, so it is always installed — but olmlx
    # itself never imports it. torchvision is gone entirely: transformers 5.x
    # auto-falls-back to its PIL image-processor backend when torchvision is
    # absent (every VLM ships both variants), so the VLM path keeps working.
    "mcp>=1.0",
    "rich>=13.0",
    "xgrammar>=0.2.1",
    "mlx-whisper>=0.4.3",
    # numba is a transitive dep (mlx-whisper -> numba -> llvmlite). Without a
    # floor, a fresh resolve of the *published wheel* (which ships no uv.lock)
    # backtracks to numba 0.53.1 / llvmlite 0.36.0, which only build on Python
    # <3.10 and hard-fail `pip install olmlx` on 3.11/3.12. The floor keeps
    # resolution in the Python-3.11+-compatible region. Declared directly so it
    # travels in wheel metadata (uv.lock does not reach PyPI users).
    "numba>=0.60",
    "prometheus-client>=0.20",
]

[project.scripts]
olmlx = "olmlx.__main__:main"

[project.optional-dependencies]
# duckduckgo-search was renamed to ddgs in mid-2025; the old name is
# unmaintained (final release 8.1.1) and its scraping breaks without updates.
search = ["ddgs>=9.0"]
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
# Kokoro TTS for /v1/audio/speech and `olmlx chat --voice` (#367, #469).
# Not core: this stack is several GB and only serves speech synthesis.
audio = [
    "mlx-audio>=0.4.4",
    # Kokoro TTS (mlx-audio) needs misaki for English grapheme->phoneme text
    # processing; without it /v1/audio/speech raises ImportError at generate
    # time. The [en] extra pulls the English pipeline (spacy etc.). Issue #367.
    "misaki[en]>=0.9.4",
    # NOTE: misaki.en also needs the spaCy model `en_core_web_sm` at generate
    # time. It is NOT declared here: spaCy models are not on PyPI (distributed
    # as GitHub-release wheels), so a bare `en-core-web-sm` Requires-Dist is
    # unresolvable for `pip install "olmlx[audio]"`. The [tool.uv.sources] URL
    # override only applies to `uv` — it does not travel in published wheel
    # metadata. Dev installs get it via the `dev` dependency-group below;
    # end users installing `[audio]` from PyPI must fetch it once with:
    #   python -m spacy download en_core_web_sm
    # (documented in the README audio/voice setup section). Issue #367.
]
# Terminal voice chat (`olmlx chat --voice`, #444): mic capture + playback via
# PortAudio, plus the TTS stack it speaks through (self-referential extra).
voice = ["olmlx[audio]", "sounddevice>=0.4.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
# spaCy English model for Kokoro TTS (#367) — not on PyPI, distributed as a
# GitHub release wheel. Keep the version aligned with the locked spaCy
# major.minor (currently 3.8.x).
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.coverage.run]
source = ["olmlx"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "datasets>=3.0",
    "httpx>=0.28.1",
    "matplotlib>=3.9",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.380",
    "openai>=1.66",
    "ruff>=0.9",
    # spaCy English model for Kokoro TTS (#367). Lives here (not in the [audio]
    # extra) so `uv sync` provisions it for dev via the [tool.uv.sources] URL
    # override, without emitting an unresolvable Requires-Dist into the
    # published wheel. End users get it via `python -m spacy download`.
    "en-core-web-sm",
]
